namespace SoftwareDesignEksamen.gear.chestPlate;

public class HeavyChestPlate : ChestPlate
{
    public HeavyChestPlate()
    {
        Armor = 10;
        Cost = 10;
    }
}