namespace SoftwareDesignEksamen.gear.chestPlate;

public class LightChestPlate : ChestPlate
{

    public LightChestPlate()
    {
        Armor = 5;
        Cost = 5;
    }
}