namespace SoftwareDesignEksamen.gear.shield;

public class KiteShield : Shield
{
    public KiteShield()
    {
        Armor = 15;
        Cost = 10;
    }
}