namespace SoftwareDesignEksamen.unit;

public class ElfUnit : Unit
{
    public ElfUnit()
    {
        MaxHealth = 50;
        Damage = 10;
        Healing = 10;
        Armor = 0;
        Reach = 1;
        LifeSteal = 0;
        Cost = 10;
    }
}