namespace SoftwareDesignEksamen.unit;

public class OrcUnit : Unit
{
    public OrcUnit()
    {
        MaxHealth = 150;
        Damage = 20;
        Healing = 0;
        Armor = 30;
        Reach = 1;
        LifeSteal = 0;
        Cost = 10;
    }
}