@startuml
'https://plantuml.com/class-diagram
interface IUI{
+ FontSize
+ Color
+ clear()
+ PrintMessage(): void
+ PrintQuestion(): void
+ PrintStartMenu(): void
+ PrintMultipleChoice(Title: String, List<String>): int
+ ReadString(): string
+ ReadInt(): int
+ ReadBoolean(): bool
+ PressToContinue(): void
}

class UI

class Db{
- database: string
+ CreateDbAndTable(): void
+ DropLeaderBoard(): void
+ UpdateScoreBoard(): void
+ GetLeaderBoard(): List<HighScoreDto>
- CheckIfUserExsists(): bool
- UpdateScore(): void
- AddNewScore(): void
}

class GameManager{
- Player1: Player
- Player2: Player
+ StartGame(): void

- BuildArmy(Player): void
- PlayerInit(): void
- ArmyInit(): void
- Attack(Player1, Player2): void
- Turn(): void
- EndGame(): void
- SaveHighscore(): void
- Battlelog(): void
- PlayersAlive():

}


class Army {
- BatteLogger: IBatteLogger
- UnitTurn: int
- combinedHealingPower
- Units: List<Unit>
+ AddUnit(Unit): void
+ AttackedBy(Unit): void
+ HealingTurn(): void
+ Update(): void
+ IsAlive(): bool
- ClearDead(): void
- Defend(): void
- NextUnit(): Unit

}
class Player{
- BatteLogger: IBatteLogger
- Army: Army
- UI: IUI
+ Name: String
+ Gold: int
+ Army: Army
+ AttackedBy(Unit)
+ AddUnit(): void
+ HealingTurn(): void
+ BuildArmy(): void
+ ListArmy(): void
+ Update(): void
+ IsAlive(): bool
- ClearDead(): void
}

abstract class Unit{
+ Weapon: Weapon
+ Shield: Shield
+ ChestPlate: ChestPlate
+ Cost: int
+ Health: int
+ MaxHealth: int
+ Damage: int
+ Healing: int
+ Armor: int
+ Reach: int
+ Heal(int): void
+ LifeSteal: int
+ isAlive(): bool
+ TakeDamage(int Damage): int
}
class HumanUnit
class OrcUnit
class ElfUnit
abstract class UnitDecorator{
- Original: Unit
}
class DPSDecorator
class TankDecorator
class HealerDecorator

abstract class Weapon{
+ Cost: int
+ Damage: int
+ Reach: int
+ LifeSteal: int
}

abstract class WeaponDecorator
class ReachDecorator
class SharpDecorator
class LifeStealDecorator

abstract class Shield
class KiteShield

abstract class ShieldDecorator

abstract class ChestPlate{
+ Cost: int
+ Armor: int
}

abstract class ChestPlateDecorator
class HeavyChestPlate
class LightChestPlate

class ArmorDecorator

ChestPlate <-- ChestPlateDecorator
ChestPlate <-- HeavyChestPlate
ChestPlate <-- LightChestPlate

ChestPlateDecorator <-- ArmorDecorator

Shield <-- ShieldDecorator
Shield <-- KiteShield

Weapon <-- WeaponDecorator
Weapon <-- Sword
Weapon <-- spear

WeaponDecorator <-- ReachDecorator
WeaponDecorator <-- SharpDecorator
WeaponDecorator <-- LifeStealDecorator

IUI <- UI
UI -- GameManager
GameManager o- Player
GameManager -- Db
Player - Army : has a Army
Army - Unit : has many units
Unit o--- Weapon
Unit o- ChestPlate
Shield ---o Unit
Unit <-- HumanUnit
Unit <-- OrcUnit
Unit <-- ElfUnit
Unit <-- UnitDecorator
UnitDecorator <-- TankDecorator
UnitDecorator <-- DPSDecorator
UnitDecorator <-- HealerDecorator





@enduml